tests/machine/x/c/order_by_map.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/order_by_map.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/order_by_map.c:48:22: warning: implicit declaration of function ‘data_list_t_create’ [-Wimplicit-function-declaration]
   48 |   data_list_t tmp2 = data_list_t_create(data.len);
      |                      ^~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/order_by_map.c:48:22: error: invalid initializer
/workspace/mochi/tests/machine/x/c/order_by_map.c:49:3: error: unknown type name ‘map_string_int’
   49 |   map_string_int *tmp5 =
      |   ^~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/order_by_map.c:50:8: error: ‘map_string_int’ undeclared (first use in this function)
   50 |       (map_string_int *)malloc(sizeof(map_string_int) * data.len);
      |        ^~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/order_by_map.c:50:8: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/order_by_map.c:50:24: error: expected expression before ‘)’ token
   50 |       (map_string_int *)malloc(sizeof(map_string_int) * data.len);
      |                        ^
/workspace/mochi/tests/machine/x/c/order_by_map.c:55:18: error: incompatible types when assigning to type ‘int’ from type ‘tmp_item_t’
   55 |     tmp5[tmp3] = (tmp_item_t){.a = x.a, .b = x.b};
      |                  ^
/workspace/mochi/tests/machine/x/c/order_by_map.c:61:11: warning: implicit declaration of function ‘cmp_map_string_int’ [-Wimplicit-function-declaration]
   61 |       if (cmp_map_string_int(tmp5[i8], tmp5[i9]) > 0) {
      |           ^~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/order_by_map.c:62:23: error: expected ‘;’ before ‘tmp6’
   62 |         map_string_int tmp6 = tmp5[i8];
      |                       ^~~~~
      |                       ;
/workspace/mochi/tests/machine/x/c/order_by_map.c:64:20: error: ‘tmp6’ undeclared (first use in this function); did you mean ‘tmp3’?
   64 |         tmp5[i9] = tmp6;
      |                    ^~~~
      |                    tmp3

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:52Z
