tests/machine/x/c/order_by_map.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T02:49:32Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int a;
  int b;
} data_t;
typedef struct {
  int len;
  data_t *data;
} data_list_t;
static data_list_t create_data_list(int len) {
  data_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(data_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int a;
  int b;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
static tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int main() {
  data_t tmp1_data[] = {(data_t){.a = 1, .b = 2}, (data_t){.a = 1, .b = 1},
                        (data_t){.a = 0, .b = 5}};
  data_list_t tmp1 = {3, tmp1_data};
  data_list_t data = tmp1;
  data_list_t tmp2 = data_list_t_create(data.len);
  map_string_int *tmp5 =
      (map_string_int *)malloc(sizeof(map_string_int) * data.len);
  int tmp3 = 0;
  for (int tmp4 = 0; tmp4 < data.len; tmp4++) {
    data_t x = data.data[tmp4];
    tmp2.data[tmp3] = x;
    tmp5[tmp3] = (tmp_item_t){.a = x.a, .b = x.b};
    tmp3++;
  }
  tmp2.len = tmp3;
  for (int i8 = 0; i8 < tmp3 - 1; i8++) {
    for (int i9 = i8 + 1; i9 < tmp3; i9++) {
      if (cmp_map_string_int(tmp5[i8], tmp5[i9]) > 0) {
        map_string_int tmp6 = tmp5[i8];
        tmp5[i8] = tmp5[i9];
        tmp5[i9] = tmp6;
        data_t tmp7 = tmp2.data[i8];
        tmp2.data[i8] = tmp2.data[i9];
        tmp2.data[i9] = tmp7;
      }
    }
  }
  data_list_t sorted = tmp2;
  for (int i10 = 0; i10 < sorted.len; i10++) {
    data_t it = sorted.data[i10];
    if (i10 > 0)
      printf(" ");
    printf("map[");
    printf("a:");
    printf("%d", it.a);
    printf(" ");
    printf("b:");
    printf("%d", it.b);
    printf("]");
  }
  printf("\n");
  free(tmp2.data);
  return 0;
}
